crates/data-dict/tests/snapshots/validate_spec__s14_time_zone_on_non_datetime.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: events
    columns:
      - name: event_day
        type: date
        time_zone: America/New_York
        range: [2020-01-01, 2024-12-31]
────────────────────────────────────────
error: [S14] A column with `time_zone` must have type `datetime`.
 --> dict.yaml:8:20
  |
4 |   - name: events
5 |     columns:
6 |       - name: event_day
7 |         type: date
8 |         time_zone: America/New_York
  |                    ^^^^^^^^^^^^^^^^ has `time_zone` but has type `date`
