crates/data-dict/tests/snapshots/validate_spec__s17_number_not_three_components.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
version:
  number: "1.2.0.0"
────────────────────────────────────────
error: [S17] A `version` `number` must have three dot-separated numeric components, with an optional pre-release/build suffix.
 --> dict.yaml:4:11
  |
3 | version:
4 |   number: "1.2.0.0"
  |           ^^^^^^^ `1.2.0.0` is not a valid version number
