crates/data-dict/tests/snapshots/validate_spec__s19_invalid_list_element_type.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    columns:
      - name: c
        type: list(foo)
        examples: [a, b, c]
────────────────────────────────────────
error[S19]: A column's `type` must be a known type.
  --> dict.yaml:7:15
   |
LL |   - name: t
LL |     columns:
LL |       - name: c
LL |         type: list(foo)
   |               ^^^^^^^^^ `foo` is not a recognised list element type
